# pydrodelta

./: .gitignore  MANIFEST.in  README.md  generate_doc.py  log.txt  pyproject.toml  requirements.txt
config/: config_empty.yml  defaults.yml
data/plans/: from_csv.yml
doc/: a5.md  a5_schemas.md  analysis.md  api_index.md  base.md  calibration.calibration.md  calibration.downhill_simplex_calibration.md  calibration.linear_regression_calibration.md  calibration.md  config.md  derived_node_serie.md  derived_node_variable.md  derived_origin.md  descriptors.bool_descriptor.md  descriptors.bool_or_none_descriptor.md  descriptors.dataframe_descriptor.md  descriptors.datetime_descriptor.md  descriptors.dict_descriptor.md  descriptors.duration_descriptor.md  descriptors.duration_descriptor_default_none.md  descriptors.float_descriptor.md  descriptors.int_descriptor.md  descriptors.list_or_dict_descriptor.md  descriptors.string_descriptor.md  downhill_simplex.md  function_boundary.md  generic_linear_channel.md  interpolated_origin.md  model_parameter.md  model_state.md  node.md  node_serie.md  node_serie_prono.md  node_serie_prono_metadata.md  node_variable.md  observed_node_variable.md  persistence.md  plan.md  procedure.md  procedure_boundary.md  (+57 more)
templates/: node.yml  nodeserie.json  plotparams.yml
tests/: a5_test.py  analogy_test.py  arima_test.py  exponential_fit_test.py  gr4j_test.py  graph_test.py  grp_test.py  hidrosat_test.py  hosh4p1l_test.py  hosh4piluh_test.py  hosh5pilnash_test.py  hoshp1l_test.py  junction_test.py  lag_and_route_net_test.py  lag_and_route_plan_test.py  lag_and_route_procedure_test.py  lagandroute_test.py  linear_channel_test.py  linear_combination_test.py  linear_extrapolate_test.py  linear_fit_test.py  linear_net_test.py  linear_reservoir_cascade_test.py  muskingum_test.py  node_serie_prono_test.py  node_serie_test.py  node_test.py  observed_node_variable_test.py  parse_date_test.py  persistence_procedure_test.py  persistence_test.py  plan_test.py  polynomial_test.py  pq_test.py  procedure_function_test.py  procedure_test.py  pydrology_procedure_interface_test.py  round_date_test.py  sac_test.py  sacenkf_test.py  (+7 more)
tools/: import_cal_pars.py  import_cal_pars_autoreg.py  import_cal_pars_junction.py  import_cal_pars_sac.py  query_parameters.py
(+352 files in other folders)
