[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pydrodelta"
version = "0.0.4"
requires-python = ">=3.8"

dependencies = [
    "requests",
    "datetime",
    "numpy",
    "matplotlib",
    "pandas==2.2.3",
    "pytz",
    "jsonschema",
    "pyyaml",
    "isodate",
    "networkx",
    "a5-client",
    "scikit-learn",
    "minio",
    "colour",
    "statsmodels",
    "click"
]

[project.scripts]
pydrodelta = "pydrodelta:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["pydrodelta*"]

[tool.setuptools.package-data]
pydrodelta = ["schemas/yaml/*.yml","schemas/json/*.json"]
