[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pydrodelta"
version = "0.0.16"
requires-python = ">=3.8"

dependencies = [
    "requests",
    "datetime",
    "numpy",
    "matplotlib",
    "pandas>=1.5.1",
    "pytz",
    "jsonschema",
    "pyyaml",
    "networkx",
    "a5-client>=0.1.20",
    "scikit-learn",
    "minio",
    "colour",
    "statsmodels",
    "click",
    "typing-extensions"
]

[project.scripts]
pydrodelta = "pydrodelta:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["pydrodelta*"]

[tool.setuptools.package-data]
pydrodelta = ["schemas/yaml/*.yml","schemas/json/*.json"]
